2007-07-27  Jürg Billeter  <j@bitron.ch>

	* vala/valainterfacewriter.vala: even more fixes for libraries with
	  generic types

2007-07-26  Jürg Billeter  <j@bitron.ch>

	* gobject/valacodegeneratorsourcefile.vala: also free the array itself
	  in _vala_array_free

2007-07-26  Jürg Billeter  <j@bitron.ch>

	* gobject/valacodegenerator.vala: unref the item in foreach as
	  Gee.Iterator.get () transfers ownership

2007-07-26  Jürg Billeter  <j@bitron.ch>

	* gobject/valacodegeneratorclass.vala, vapi/glib-2.0.vala: support
	  class destructors

2007-07-26  Jürg Billeter  <j@bitron.ch>

	* gobject/valacodegenerator.vala,
	  gobject/valacodegeneratorassignment.vala,
	  gobject/valacodegeneratorsourcefile.vala: free array elements

2007-07-26  Jürg Billeter  <j@bitron.ch>

	* vala/valamemorymanager.vala, vala/valasemanticanalyzer.vala,
	  gobject/valacodegenerator.vala,
	  gobject/valacodegeneratorassignment.vala,
	  gobject/valacodegeneratorinvocationexpression.vala: support element
	  access for types implementing Gee.List or Gee.Map

2007-07-26  Jürg Billeter  <j@bitron.ch>

	* vala/valastruct.vala, gobject/valacodegeneratormethod.vala,
	  gobject/valacodegeneratorstruct.vala: use GSlice and generate free
	  function for reference-type structs with a creation method

2007-07-25  Jürg Billeter  <j@bitron.ch>

	* vala/valaarray.vala: remove comments of overridden methods

2007-07-25  Jürg Billeter  <j@bitron.ch>

	* vala/valainvokable.vala, vala/valamemorymanager.vala,
	  vala/valasymbolresolver.vala, gobject/valacodegenerator.vala,
	  gobject/valacodegeneratorassignment.vala,
	  gobject/valacodegeneratorclass.vala,
	  gobject/valacodegeneratormethod.vala: add dup_func parameter to
	  generic classes, fix some memory management issues with generic types

2007-07-25  Jürg Billeter  <j@bitron.ch>

	* gobject/valacodegenerator.vala, gobject/valacodegeneratorclass.vala,
	  gobject/valacodegeneratormethod.vala,