@@ -1,5 +1,10 @@
 2007-07-27  Jürg Billeter  <j@bitron.ch>
 
+	* vapigen/valagidlparser.vala: use weak variables in foreach statements
+	  where appropriate
+
+2007-07-27  Jürg Billeter  <j@bitron.ch>
+
 	* vala/valainterfacewriter.vala: even more fixes for libraries with
 	  generic types
 
